# CISP400-Mandelbrot

./: .gitignore  CMakeLists.txt  makefile
src/: ComplexPlane.cpp  ComplexPlane.h  main.cpp
